k8s/local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abonnement
spec:
  type: ClusterIP
  selector:
    app: abonnement
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
